Fix overlap of sidebar & stubs column

--- a/public/bootstrap/css/wf.css
+++ b/public/bootstrap/css/wf.css
@@ -49,7 +49,7 @@ tr td {
 }
 
 #sidebar-container {
-width: 160px;
+width: 155px;
 position: absolute;
 top: 0;
 bottom: 0;
